--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,6 @@ services:
     volumes:
       - ./dbscripts/init-postgres-db.sh:/docker-entrypoint-initdb.d/init-postgres-db.sh
       # - ./dbscripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./dbdata:/var/lib/postgresql/data
+      - ./_dbdata:/var/lib/postgresql/data
 volumes:
   postgres:
